fix picture layout problems

--- a/src/components/markup/picture/index.module.css
+++ b/src/components/markup/picture/index.module.css
@@ -1,19 +1,20 @@
 .aside_image_wrapper { 
-  display: inline-block;
+  flex-shrink: 0;
 }
 
 .aside_image_wrapper_left {
-  float: left;
+  order: -1;
   margin-right: 0.5em;
+  max-height: 100%;
 }
 
 .aside_image_wrapper_right {
-  float: right;
+  order: 1;
   margin-left: 0.5em;
+  max-height: 100%;
 }
 
 .aside_image {
-  display: block;
-  width: 30%;
+  width: 100%;
 }
 
