--- a/src/components/ui/container-image/index.module.css
+++ b/src/components/ui/container-image/index.module.css
@@ -5,5 +5,8 @@
 .image {
   margin: auto;
   max-width: 100%;
+}
+
+.illustration {
   max-height: 50vh;
 }
